@@ -219,12 +219,6 @@ JNIEXPORT void JNICALL Java_com_tightdb_Table_nativeInsertMixed
 
 /*
  * Class:     com_tightdb_Table
- * Method:    nativeInsertByteBuffer
- * Signature: (JJJLjava/nio/ByteBuffer;)V
- */
-
-/*
- * Class:     com_tightdb_Table
  * Method:    nativeInsertByteArray
  * Signature: (JJJ[B)V
  */
@@ -293,12 +287,6 @@ JNIEXPORT jlong JNICALL Java_com_tightdb_Table_nativeGetDateTime
  * Signature: (JJJ)Ljava/lang/String;
  */
 JNIEXPORT jstring JNICALL Java_com_tightdb_Table_nativeGetString
-
-/*
- * Class:     com_tightdb_Table
- * Method:    nativeGetByteBuffer
- * Signature: (JJJ)Ljava/nio/ByteBuffer;
- */
   (JNIEnv *, jobject, jlong, jlong, jlong);
 
 /*
@@ -407,12 +395,6 @@ JNIEXPORT void JNICALL Java_com_tightdb_Table_nativeSetString
 
 /*
  * Class:     com_tightdb_Table
- * Method:    nativeSetByteBuffer
- * Signature: (JJJLjava/nio/ByteBuffer;)V
- */
-
-/*
- * Class:     com_tightdb_Table
  * Method:    nativeSetByteArray
  * Signature: (JJJ[B)V
  */
@@ -453,7 +435,7 @@ JNIEXPORT jboolean JNICALL Java_com_tightdb_Table_nativeHasIndex
 
 /*
  * Class:     com_tightdb_Table
- * Method:    nativeSum
+ * Method:    nativeSumInt
  * Signature: (JJ)J
  */
 JNIEXPORT jlong JNICALL Java_com_tightdb_Table_nativeSumInt
@@ -461,7 +443,7 @@ JNIEXPORT jlong JNICALL Java_com_tightdb_Table_nativeSumInt
 
 /*
  * Class:     com_tightdb_Table
- * Method:    nativeMaximum
+ * Method:    nativeMaximumInt
  * Signature: (JJ)J
  */
 JNIEXPORT jlong JNICALL Java_com_tightdb_Table_nativeMaximumInt
@@ -469,7 +451,7 @@ JNIEXPORT jlong JNICALL Java_com_tightdb_Table_nativeMaximumInt
 
 /*
  * Class:     com_tightdb_Table
- * Method:    nativeMinimum
+ * Method:    nativeMinimumInt
  * Signature: (JJ)J
  */
 JNIEXPORT jlong JNICALL Java_com_tightdb_Table_nativeMinimumInt
@@ -477,7 +459,7 @@ JNIEXPORT jlong JNICALL Java_com_tightdb_Table_nativeMinimumInt
 
 /*
  * Class:     com_tightdb_Table
- * Method:    nativeAverage
+ * Method:    nativeAverageInt
  * Signature: (JJ)D
  */
 JNIEXPORT jdouble JNICALL Java_com_tightdb_Table_nativeAverageInt
