@@ -7,6 +7,7 @@ Remember to increase the TIGHTDB_JNI_VERSION in com_tightdb_internal_Util.cpp an
 9-October-2013:
 ===============
 + Added support for Async durability in SharedGroup.
++ Added ShareGroup.reserve(bytes)
 
 27-September-2013:
 ==================
